eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-banking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "simple-banking.somraj.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-banking-api-service
            port:
              number: 80
  tls:
  - hosts:
    - simple-banking.somraj.tech
    secretName: simple-banking-api-cert
